# hackathon-ntts-2025

./: .gitignore  .nojekyll  Dockerfile  README.md  brouillon_land_cover.py  index.html  pyproject.toml  requirements_app.txt  robots.txt  search.json  sitemap.xml
.github/workflows/: build_image.yaml  publish.yaml
app/: main.py  utils.py
argocd/: template-argocd.yaml
bash/: gpkg_to_geoserver.sh  images_to_geoserver.sh
cards/: cards1.html  cards2.html
cd/: secret_gcp.yaml  secret_mlflow.yaml  secret_s3.yaml
cd/deployment-api/: deployment.yaml  ingress.yaml  service.yaml
cd/deployment-geoserver/: configmap.yaml  ingress.yaml  pvc_geoserver.yaml  pvc_geowebcache.yaml  secret.yaml  secret_s3.yaml  statefulset.yaml
inference/: main.py  main_concatene.py  nohup.out  utils.py
inference/argo-workflows/: concatene-nuts.yml  predict-nuts.yml
preprocess/: .gitignore  README.md  download_land_cover.py  main.py  main_nuts.py  requirements.txt  setup.sh  setup_argo.sh  stat_NUTS3.py  stat_clc++delta.py  stat_mask.py  stat_predictions.py  test_exec_api.py
preprocess/argo-workflows/: dl-sentinel2-contry.yaml  dl-sentinel2-nuts.yaml
preprocess/data/: country_code2country_name.json
preprocess/src/: constants.py  contours.py  download_ee_images.py  export_clc_plus_labels.py  process_ee_images.py  utils.py
presentation/: _quarto.yml  index.qmd
presentation/cards/: cards1.qmd  cards2.qmd
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/pitch/: index.html
tests/: comparaison_mask.py
training/: MLproject  mlflow-run.sh
training/argo-workflows/: train-workflow-funathon.yaml  train-workflow.yaml
training/src/: train.py
webapp/: test.ipynb
(+18 files in other folders)
