[project]
name = "funathon-2026-project3-images-train"
version = "0.1.0"
description = "Repository for training of segmentation models on satellite imagery."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "albumentations>=2.0.8",
    "astrovision>=0.14.7",
    "cloudpickle>=3.1.1",
    "gdal==3.11.4",
    "geopandas>=1.1.3",
    "jaraco-collections>=5.2.1",
    "matplotlib>=3.10.1",
    "mlflow>=2.21.3",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytorch-lightning>=2.5.1",
    "s3fs>=2026.2.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.1",
]

authors = [
  {name="Raya Berova", email="raya.berova@insee.fr"}
]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "pre-commit>=4.2.0",
]

[tool.ruff]
line-length = 130

[tool.uv]
default-groups = ["dev"]


[tool.uv.sources]
gdal = [
  { index = "gdal-wheels", marker = "sys_platform == 'linux'" },
  { index = "geospatial_wheels", marker = "sys_platform == 'win32'" },
]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "geospatial_wheels"
url = "https://nathanjmcdougall.github.io/geospatial-wheels-index/"
explicit = true

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
